#
# SPDX-FileCopyrightText: Copyright 2023 Andreas Sandberg <andreas@sandberg.uk>
#
# SPDX-License-Identifier: Apache-2.0
#

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rfchameleon"
version = "0.1.0"
description = "Python bindings for the RF Chameleon radio hardware."

authors = ["Andreas Sandberg <andreas@sandberg.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyusb = "^1.2.1"
typing-extensions = "^4.12.0"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.1"
reuse = "^3.0.1"

[tool.poetry.scripts]
rfchameleon = "rfchameleon.cmd.rfchameleon:cli"

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 2
